plugins {
    id 'net.neoforged.moddev' version '2.0.141'
}

group = rootProject.group
version = rootProject.version
def minecraftVersion = providers.gradleProperty('minecraft_version').get()
def neoForgeVersion = providers.gradleProperty('neoforge_version').get()
def modVersion = providers.gradleProperty('mod_version').get()

base {
    archivesName.set('voxy-minecraft-bridge')
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

sourceSets.main.java.srcDir rootProject.file('bridge-shared/src/main/java')

sourceSets {
    debug {
        java.srcDirs = [
                project.file('src/debug/java'),
                rootProject.file('bridge-shared/src/debug/java')
        ]
        compileClasspath += sourceSets.main.output + sourceSets.main.compileClasspath
    }
}

tasks.withType(JavaCompile).configureEach {
    options.release.set(21)
}

tasks.named('processResources') {
    dependsOn rootProject.tasks.named('buildRustServer')
    def resourceProperties = [
            version: project.version,
            minecraft: minecraftVersion,
            neoforge: neoForgeVersion,
    ]
    inputs.properties(resourceProperties)
    from(rootProject.file('rust-server/target/release/voxy-rust-server')) {
        into 'native/linux-x86_64'
    }
    filesMatching('META-INF/neoforge.mods.toml') {
        expand(resourceProperties)
    }
}

tasks.register('debugJar', Jar) {
    description = 'Build the bundled server JAR with client telemetry logging enabled'
    archiveClassifier.set('debug')
    manifest.attributes('Implementation-Version': modVersion)
    from(sourceSets.main.output) {
        exclude 'me/cortex/voxy/bridge/ServerDebug.class'
    }
    from sourceSets.debug.output
}

tasks.named('assemble') {
    dependsOn tasks.named('debugJar')
}

neoForge {
    version = neoForgeVersion
    mods {
        register('voxy_minecraft_bridge') {
            sourceSet sourceSets.main
        }
    }
}
